Fix admin panel and Google login: Centralized Firebase config and linked JS modules

--- a/admin.html
+++ b/admin.html
@@ -313,143 +313,7 @@
 
     </main>
 
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
-        import { getAuth, signInWithEmailAndPassword, onAuthStateChanged, signOut, setPersistence, inMemoryPersistence } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
-        import { getFirestore, doc, getDoc, setDoc, collection, addDoc, onSnapshot, deleteDoc, query, orderBy } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
-
-        const firebaseConfig = {
-            apiKey: "AIzaSyDKHMmR-Jl9JbqEZtS58XgM42pFftepNb4",
-            authDomain: "m989-5f329.firebaseapp.com",
-            projectId: "m989-5f329",
-            storageBucket: "m989-5f329.firebasestorage.app",
-            messagingSenderId: "617175385217",
-            appId: "1:617175385217:web:2ace1f8e6db4287376f980",
-            measurementId: "G-D8PYFFX4RN"
-        };
-
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth(app);
-        const db = getFirestore(app);
-
-        setPersistence(auth, inMemoryPersistence);
-
-        const loginOverlay = document.getElementById('login-overlay');
-        const sidebar = document.getElementById('main-sidebar');
-        const mainBody = document.getElementById('main-body');
-
-        document.getElementById('login-btn').onclick = async () => {
-            const email = document.getElementById('login-email').value;
-            const pass = document.getElementById('login-pass').value;
-            try { await signInWithEmailAndPassword(auth, email, pass); } catch (e) { alert(e.message); }
-        };
-
-        onAuthStateChanged(auth, async (user) => {
-            if (user) {
-                const snap = await getDoc(doc(db, "admins", user.email));
-                if (snap.exists()) {
-                    loginOverlay.style.display = 'none'; sidebar.style.display = 'flex'; mainBody.style.display = 'block';
-                    initDashboard();
-                } else { alert("Unauthorized"); signOut(auth); }
-            } else { loginOverlay.style.display = 'flex'; sidebar.style.display = 'none'; mainBody.style.display = 'none'; }
-        });
-
-        function initDashboard() {
-            onSnapshot(doc(db, "stats", "counters"), s => { if (s.exists()) document.getElementById('stat-vis').innerText = s.data().total_visitors || 0; });
-            onSnapshot(collection(db, "products"), s => { document.getElementById('stat-prod').innerText = s.size; renderProducts(s.docs); });
-            onSnapshot(collection(db, "orders"), s => { document.getElementById('stat-ord').innerText = s.size; renderOrders(s.docs); });
-            onSnapshot(collection(db, "admins"), s => renderStaff(s.docs));
-            loadShipping();
-        }
-
-        async function toBase64(file) {
-            return new Promise((r) => { const reader = new FileReader(); reader.readAsDataURL(file); reader.onload = (e) => r(e.target.result); });
-        }
-
-        // Products
-        document.getElementById('p-publish').onclick = async (e) => {
-            const btn = e.target; btn.disabled = true; btn.innerHTML = "Publishing...";
-            try {
-                const file = document.getElementById('p-img').files[0];
-                const base64 = await toBase64(file);
-                await addDoc(collection(db, "products"), { name: document.getElementById('p-name').value, price_now: document.getElementById('p-price').value, main_image: base64, visible: true, createdAt: new Date() });
-                alert("Live!"); document.getElementById('p-form').style.display = 'none';
-            } catch (err) { alert(err.message); } finally { btn.disabled = false; btn.innerText = "PUBLISH"; }
-        };
-
-        function renderProducts(docs) {
-            document.getElementById('p-grid').innerHTML = docs.map(d => {
-                const p = d.data(); const visible = p.visible !== false;
-                return `
-                <div class="data-card" style="flex-direction:column">
-                    <div style="position:relative; width:100%">
-                        <img src="${p.main_image}" style="width:100%; height:150px; object-fit:cover; border-radius:12px; opacity:${visible ? 1 : 0.3}">
-                        <button onclick="window.toggleVis('${d.id}', ${visible})" style="position:absolute; top:5px; right:5px; background:#000; color:#fff; border:none; border-radius:50%; padding:5px; cursor:pointer;"><i data-lucide="${visible ? 'eye' : 'eye-off'}"></i></button>
-                    </div>
-                    <div style="margin-top:10px; text-align:center"><h4>${p.name}</h4><p>${p.price_now} EGP</p><button class="btn-danger" style="margin-top:5px; padding:5px; border-radius:8px; width:100%" onclick="window.delP('${d.id}')">Delete</button></div>
-                </div>
-            `;
-            }).join('');
-            lucide.createIcons();
-        }
-
-        // Orders
-        function renderOrders(docs) {
-            document.getElementById('o-list').innerHTML = docs.map(d => {
-                const o = d.data();
-                return `<div class="data-card"><div><strong>${o.customer_name}</strong> - ${o.total_price} EGP<br><small>${o.phone} | ${o.address}</small></div><button class="btn-danger" style="padding:5px 10px; width:auto" onclick="window.delO('${d.id}')">Del</button></div>`;
-            }).join('');
-        }
-
-        // Staff
-        document.getElementById('add-staff-toggle').onclick = () => { const f = document.getElementById('staff-form'); f.style.display = f.style.display === 'none' ? 'block' : 'none'; };
-        document.getElementById('s-save').onclick = async () => {
-            const email = document.getElementById('s-email').value;
-            const role = document.getElementById('s-role').value;
-            await setDoc(doc(db, "admins", email), { email, role, createdAt: new Date() });
-            alert("Done"); document.getElementById('staff-form').style.display = 'none';
-        };
-
-        function renderStaff(docs) {
-            document.getElementById('staff-list').innerHTML = docs.map(d => {
-                const s = d.data();
-                return `<div class="data-card"><div><strong>${s.email}</strong> - ${s.role}</div><button class="btn-danger" style="padding:5px 10px; width:auto" onclick="window.delStaff('${d.id}')">Del</button></div>`;
-            }).join('');
-        }
-
-        // Shipping
-        async function loadShipping() {
-            const provinces = ["Cairo", "Giza", "Alexandria", "Dakahlia", "Sharqia", "Gharbia", "Monufia", "Beheira", "Kafr El Sheikh", "Damietta", "Port Said", "Ismailia", "Suez", "North Sinai", "South Sinai", "Beni Suef", "Fayoum", "Minya", "Assiut", "Sohag", "Qena", "Luxor", "Aswan", "Red Sea", "New Valley", "Matrouh"];
-            const grid = document.getElementById('ship-grid');
-            const snap = await getDoc(doc(db, "settings", "shipping"));
-            const rates = snap.exists() ? snap.data().rates : {};
-            grid.innerHTML = provinces.map(p => `<div><label style="font-size:0.7rem; opacity:0.5">${p}</label><input class="ship-in" data-p="${p}" type="number" value="${rates[p] || 0}"></div>`).join('');
-        }
-
-        document.getElementById('save-ship').onclick = async () => {
-            const rates = {}; document.querySelectorAll('.ship-in').forEach(i => rates[i.dataset.p] = i.value);
-            await setDoc(doc(db, "settings", "shipping"), { rates }); alert("Saved");
-        };
-
-        window.toggleVis = async (id, s) => { await setDoc(doc(db, "products", id), { visible: !s }, { merge: true }); };
-        window.delP = async (id) => { if (confirm("Del?")) await deleteDoc(doc(db, "products", id)); };
-        window.delO = async (id) => { if (confirm("Del?")) await deleteDoc(doc(db, "orders", id)); };
-        window.delStaff = async (id) => { if (confirm("Del?")) await deleteDoc(doc(db, "admins", id)); };
-        document.getElementById('logout-btn').onclick = () => signOut(auth);
-
-        document.querySelectorAll('.nav-item').forEach(item => {
-            item.onclick = () => {
-                document.querySelectorAll('.nav-item').forEach(i => i.classList.remove('active')); item.classList.add('active');
-                document.querySelectorAll('.section-view').forEach(s => s.classList.remove('active'));
-                document.getElementById(item.dataset.target).classList.add('active');
-                document.getElementById('section-title').innerText = item.innerText;
-                lucide.createIcons();
-            }
-        });
-
-        document.getElementById('add-p-toggle').onclick = () => { const f = document.getElementById('p-form'); f.style.display = f.style.display === 'none' ? 'block' : 'none'; };
-        lucide.createIcons();
-    </script>
+    <script type="module" src="/src/admin.js"></script>
 </body>
 
 </html>
