--- a/index.html
+++ b/index.html
@@ -246,138 +246,7 @@
     </div>
   </div>
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
-    import { getAuth, signInWithPopup, GoogleAuthProvider, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
-    import { getFirestore, collection, onSnapshot, addDoc, doc, setDoc, increment } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyDKHMmR-Jl9JbqEZtS58XgM42pFftepNb4",
-      authDomain: "m989-5f329.firebaseapp.com",
-      projectId: "m989-5f329",
-      storageBucket: "m989-5f329.firebasestorage.app",
-      messagingSenderId: "617175385217",
-      appId: "1:617175385217:web:2ace1f8e6db4287376f980",
-      measurementId: "G-D8PYFFX4RN"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const db = getFirestore(app);
-
-    lucide.createIcons();
-
-    // Theme
-    const themeBtn = document.getElementById('theme-toggle');
-    themeBtn.onclick = () => {
-      const isDark = document.body.getAttribute('data-theme') === 'dark';
-      document.body.setAttribute('data-theme', isDark ? 'light' : 'dark');
-      document.getElementById('moon-icon').style.display = isDark ? 'block' : 'none';
-      document.getElementById('sun-icon').style.display = isDark ? 'none' : 'block';
-      lucide.createIcons();
-    };
-
-    // Sidebars
-    const openSidebar = (id) => document.getElementById(id).classList.add('active');
-    const closeSidebar = (id) => document.getElementById(id).classList.remove('active');
-    document.getElementById('btn-cart').onclick = () => openSidebar('cart-sidebar');
-    document.getElementById('close-cart').onclick = () => closeSidebar('cart-sidebar');
-    document.getElementById('login-btn').onclick = () => openSidebar('profile-sidebar');
-    document.getElementById('close-profile').onclick = () => closeSidebar('profile-sidebar');
-
-    // Products Sync
-    const prodList = document.getElementById('products-list');
-    onSnapshot(collection(db, "products"), snap => {
-      if (snap.empty) {
-        prodList.innerHTML = `<p style="grid-column: 1/-1; text-align:center; opacity:0.5">No products available yet.</p>`;
-        return;
-      }
-      prodList.innerHTML = "";
-      snap.forEach(d => {
-        const p = d.data();
-        if (p.visible === false) return;
-        const card = document.createElement('div');
-        card.className = "product-card";
-        card.innerHTML = `
-                    <img src="${p.main_image}" class="product-img">
-                    <div class="product-info">
-                        <h3>${p.name}</h3>
-                        <p class="p-price">${p.price_now} EGP</p>
-                        <button class="btn btn-primary add-btn" style="width:100%; margin-top:1rem; padding:0.8rem; font-size:0.8rem;" 
-                            data-id="${d.id}" data-name="${p.name}" data-price="${p.price_now}" data-img="${p.main_image}">
-                            Add to Bag
-                        </button>
-                    </div>
-                `;
-        prodList.appendChild(card);
-      });
-
-      document.querySelectorAll('.add-btn').forEach(b => {
-        b.onclick = () => {
-          addToBag({ ...b.dataset });
-          openSidebar('cart-sidebar');
-        };
-      });
-    }, err => {
-      prodList.innerHTML = `<p style="grid-column: 1/-1; text-align:center; color:red">Error: ${err.message}. Check Firebase Rules.</p>`;
-    });
-
-    // Bag Logic
-    let bag = JSON.parse(localStorage.getItem('bag')) || [];
-    const renderBag = () => {
-      const bagItems = document.getElementById('cart-items');
-      const totalBox = document.getElementById('checkout-box');
-      if (bag.length === 0) {
-        bagItems.innerHTML = `<p style="opacity:0.5">Bag is empty.</p>`;
-        totalBox.style.display = 'none';
-        return;
-      }
-      totalBox.style.display = 'block';
-      bagItems.innerHTML = bag.map((item, idx) => `
-                <div style="display:flex; gap:15px; margin-bottom:1.5rem; align-items:center;">
-                    <img src="${item.img}" style="width:50px; height:70px; object-fit:cover; border-radius:5px;">
-                    <div style="flex:1"><h4>${item.name}</h4><p>${item.price} EGP × ${item.qty}</p></div>
-                    <button onclick="window.ripBag(${idx})" style="background:none; border:none; color:red; cursor:pointer;">×</button>
-                </div>
-            `).join('');
-      document.getElementById('bag-total').innerText = bag.reduce((s, i) => s + (i.price * i.qty), 0).toLocaleString() + " EGP";
-    };
-
-    const addToBag = (p) => {
-      const ex = bag.find(i => i.id === p.id);
-      if (ex) ex.qty++; else bag.push({ ...p, qty: 1 });
-      localStorage.setItem('bag', JSON.stringify(bag));
-      renderBag();
-    };
-
-    window.ripBag = (idx) => { bag.splice(idx, 1); localStorage.setItem('bag', JSON.stringify(bag)); renderBag(); };
-
-    document.getElementById('checkout-btn').onclick = async (e) => {
-      const name = document.getElementById('c-name').value;
-      const phone = document.getElementById('c-phone').value;
-      const addr = document.getElementById('c-addr').value;
-      if (!name || !phone || !addr) return alert("Fill details");
-      e.target.disabled = true;
-      try {
-        await addDoc(collection(db, "orders"), {
-          customer_name: name, phone, address: addr,
-          items: bag, total_price: bag.reduce((s, i) => s + (i.price * i.qty), 0),
-          status: 'Pending', createdAt: new Date()
-        });
-        alert("Order Placed!"); bag = []; localStorage.setItem('bag', "[]"); renderBag(); closeSidebar('cart-sidebar');
-      } catch (err) { alert(err.message); } finally { e.target.disabled = false; }
-    };
-
-    renderBag();
-
-    // Visitor Tracking
-    if (!sessionStorage.getItem('v')) {
-      sessionStorage.setItem('v', '1');
-      setDoc(doc(db, "stats", "counters"), { total_visitors: increment(1) }, { merge: true });
-    }
-
-    gsap.from("#hero-title", { y: 50, opacity: 0, duration: 1.5 });
-  </script>
+  <script type="module" src="/src/main.js"></script>
 </body>
 
 </html>
