Trico style: WhatsApp integration, fixed cart, removed products

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ZERO — Minimalist Clothing</title>
+  <title>Trico style — Modern Fashion</title>
   <script src="https://unpkg.com/lucide@latest"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&display=swap" rel="stylesheet">
@@ -192,7 +192,7 @@
 
 <body>
   <nav>
-    <div class="logo">Zero</div>
+    <div class="logo">Trico style</div>
     <div style="display: flex; gap: 1rem; align-items: center;">
       <button id="theme-toggle" class="icon-btn">
         <i data-lucide="moon" id="moon-icon"></i>
@@ -203,8 +203,8 @@
   </nav>
 
   <main class="hero">
-    <h1 id="hero-title">ZERO</h1>
-    <p>Essential pieces, zero distractions. Designed for those who value luxury in simplicity.</p>
+    <h1 id="hero-title">TRICO</h1>
+    <p>Modern fashion for the confident you. Style with elegance.</p>
     <a href="#store" class="btn btn-primary">Shop Collection</a>
   </main>
 
@@ -231,7 +231,7 @@
         style="width:100%; padding:10px; margin-bottom:10px; background:var(--card-bg); border:1px solid var(--border-color); color:var(--text-color);">
       <textarea id="c-addr" placeholder="Address"
         style="width:100%; padding:10px; margin-bottom:10px; background:var(--card-bg); border:1px solid var(--border-color); color:var(--text-color);"></textarea>
-      <button id="checkout-btn" class="btn btn-primary" style="width:100%">Order Now</button>
+      <button id="checkout-btn" class="btn btn-primary" style="width:100%">إرسال الطلب عبر واتساب</button>
     </div>
   </div>
 
