Fix: replaced all icons with ultra-reliable inline SVGs to prevent display issues

--- a/index.html
+++ b/index.html
@@ -194,11 +194,30 @@
     <div class="logo">Trico style</div>
     <div style="display: flex; gap: 1rem; align-items: center;">
       <button id="theme-toggle" class="icon-btn" title="Toggle theme">
-        <span id="moon-icon" style="font-size:20px;">🌙</span>
-        <span id="sun-icon" style="display:none; font-size:20px;">☀️</span>
+        <svg id="moon-icon" viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2"
+          fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
+        </svg>
+        <svg id="sun-icon" style="display:none" viewBox="0 0 24 24" width="20" height="20" stroke="currentColor"
+          stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <circle cx="12" cy="12" r="5"></circle>
+          <line x1="12" y1="1" x2="12" y2="3"></line>
+          <line x1="12" y1="21" x2="12" y2="23"></line>
+          <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
+          <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
+          <line x1="1" y1="12" x2="3" y2="12"></line>
+          <line x1="21" y1="12" x2="23" y2="12"></line>
+          <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
+          <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
+        </svg>
       </button>
       <button id="btn-cart" class="icon-btn" title="Shopping bag">
-        <span style="font-size:20px;">🛒</span>
+        <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2" fill="none"
+          stroke-linecap="round" stroke-linejoin="round">
+          <path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4Z"></path>
+          <line x1="3" y1="6" x2="21" y2="6"></line>
+          <path d="M16 10a4 4 0 0 1-8 0"></path>
+        </svg>
       </button>
     </div>
   </nav>
@@ -214,7 +233,15 @@
   <!-- Sidebars -->
   <div id="cart-sidebar" class="sidebar">
     <div style="display:flex; justify-content:space-between; margin-bottom:2rem;">
-      <h2>Bag</h2><span style="cursor:pointer; font-size:28px; font-weight:300; line-height:1;" id="close-cart">×</span>
+      <h2>Bag</h2><span
+        style="cursor:pointer; font-size:28px; font-weight:300; line-height:1; display:flex; align-items:center; justify-content:center;"
+        id="close-cart">
+        <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none"
+          stroke-linecap="round" stroke-linejoin="round">
+          <line x1="18" y1="6" x2="6" y2="18"></line>
+          <line x1="6" y1="6" x2="18" y2="18"></line>
+        </svg>
+      </span>
     </div>
     <div id="cart-items"></div>
     <div id="checkout-box" style="margin-top:2rem; display:none;">
