--- a/index.html
+++ b/index.html
@@ -74,7 +74,17 @@
       transition: var(--transition);
       display: flex;
       align-items: center;
+      justify-content: center;
       position: relative;
+    }
+
+    .icon-btn svg {
+      width: 24px;
+      height: 24px;
+      stroke: currentColor;
+      stroke-width: 2;
+      fill: none;
+      display: block;
     }
 
     .hero {
